# Kursach

./: .env  .gitignore  docker-compose.yml
backend/: .dockerignore  .env  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/app/: database.py  seed.py  seed_data.py
backend/app/crud/: database.py
backend/app/models/: models.py  payments.py  users.py
backend/app/repositories/: balance_repo.py  payment_repo.py  receipt_repo.py  user_repo.py
backend/app/routers/: Auth.py  admin.py  balance.py  payments.py  receipts.py
backend/app/schemas/: payments.py  users.py
backend/src/migrations/: env.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/: auth.ts
frontend/app/components/: AdminPanel.tsx  AuthForm.tsx  BalanceManagement.tsx  BalanceSection.tsx  PaymentForm.tsx  ProtectedRoute.tsx  ReceiptDetailView.tsx  ReceiptPayment.tsx  ReceiptVerification.tsx
frontend/app/dashboard/: page.tsx
frontend/app/lib/: api.ts
