[project]
name = "backend"
version = "0.1.0"
description = "Backend for Kursach"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "asyncpg>=0.30.0",
    "authx>=1.4.3",
    "fastapi[standart]>=0.116.1",
    "pydantic[email]>=2.11.7",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
